--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Aishwarya — Data Engineer</title>
-  <link rel="stylesheet" href="./assets/style.css" />
-
+    <link rel="stylesheet" href="assets/style.css?v=3"/>
 </head>
 
 <body>
