--- a/index.html
+++ b/index.html
@@ -4,26 +4,32 @@
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
   <title>Aishwarya Gurrala Muni | Portfolio</title>
+  <meta name="description" content="Aishwarya Gurrala Muni — Data Analytics, Data Engineering, and ML projects: SQL, Python, dashboards, modeling, and evaluation." />
   <link rel="stylesheet" href="assets/style.css"/>
 </head>
 
 <body>
-  <button class="themeToggle" id="themeToggle" aria-label="Toggle theme">🌙</button>
+  <button class="themeToggle" id="themeToggle" aria-label="Toggle theme" title="Toggle theme">🌙</button>
 
   <div class="layout">
     <!-- LEFT SIDEBAR -->
     <aside class="sidebar">
       <div class="profile">
         <div class="name">Aishwarya<br/>Gurrala Muni</div>
-        <div class="role">Data Analyst · Data Scientist</div>
+        <div class="role">Data Analytics · Data Engineering · ML</div>
 
         <p class="blurb">
-          SQL + Python for analytics, modeling, and decision-ready insights.
-          Focused on clean metrics, reliable data, and explainable results.
+          I work with <strong>SQL + Python</strong> to build clean analysis, reliable pipelines,
+          and ML results that are easy to explain (and easy to trust).
         </p>
 
         <div class="ctaRow">
           <a class="btn" href="assets/Aishwarya_Resume.pdf" target="_blank" rel="noopener">Download Resume ↗</a>
+        </div>
+
+        <div class="miniRow">
+          <span class="pill">Cincinnati, OH</span>
+          <span class="pill">Open to US roles</span>
         </div>
       </div>
 
@@ -42,17 +48,19 @@
       </div>
 
       <nav class="sideNav">
-        <a href="#featured" class="sideLink">Featured Work</a>
+        <a href="#projects" class="sideLink">Projects</a>
         <a href="#experience" class="sideLink">Experience</a>
         <a href="#skills" class="sideLink">Skills</a>
         <a href="#certs" class="sideLink">Certifications</a>
         <a href="#education" class="sideLink">Education</a>
         <a href="#now" class="sideLink">Now</a>
+        <a href="#contact" class="sideLink">Contact</a>
       </nav>
 
       <div class="sideLinks">
         <a class="linkBtn" href="https://github.com/aishwarya-gurrala" target="_blank" rel="noopener">GitHub</a>
         <a class="linkBtn" href="https://www.linkedin.com/" target="_blank" rel="noopener">LinkedIn</a>
+        <!-- Replace the email below with your real one -->
         <a class="linkBtn" href="mailto:youremail@example.com">Email</a>
         <a class="linkBtn" href="assets/Aishwarya_Resume.pdf" target="_blank" rel="noopener">Resume</a>
       </div>
@@ -62,194 +70,19 @@
     <main class="content">
       <!-- HERO -->
       <section class="hero">
-        <div class="eyebrow">ANALYTICS · MODELS · IMPACT</div>
+        <div class="eyebrow">DATA · METRICS · ML</div>
 
-        <h1>Analytics that leaders can act on—backed by solid data.</h1>
+        <!-- Replaced the line you didn’t like -->
+        <h1>I turn messy data into clear answers—and make sure the numbers hold up.</h1>
 
         <p class="sub">
-          I connect data engineering, business metrics, and ML evaluation so insights are trustworthy,
-          reproducible, and easy to explain.
+          I blend analytics, engineering, and model evaluation so insights are reproducible,
+          stakeholder-friendly, and actually usable in real decisions.
         </p>
 
-        <!-- Proof cards (same area as your earlier intro; new content only) -->
         <div class="proofGrid">
           <div class="proofCard">
-            <div class="proofValue">2M+</div>
-            <div class="proofLabel">records prepared</div>
-            <div class="proofMeta">ML-ready datasets</div>
-          </div>
+            <div class="proofValue">SQL + Python</div>
+            <div class="proofLabel">end-to-end delivery</div>
+            <div class="proofMeta">from raw → clean → d
 
-          <div class="proofCard">
-            <div class="proofValue">Models</div>
-            <div class="proofLabel">compared & evaluated</div>
-            <div class="proofMeta">MSPE · trade-offs · interpretability</div>
-          </div>
-
-          <div class="proofCard">
-            <div class="proofValue">Dashboards</div>
-            <div class="proofLabel">+ RCA pipelines</div>
-            <div class="proofMeta">metrics · monitoring · freshness</div>
-          </div>
-        </div>
-      </section>
-
-      <!-- FEATURED WORK -->
-      <section id="featured" class="section">
-        <h2>Projects</h2>
-
-        <div class="grid">
-          <!-- Project 1 -->
-          <article class="card">
-            <div class="badge">FEATURED</div>
-            <div class="thumb"></div>
-            <div class="cardBody">
-              <div class="cardTitle">Model Selection Case Study: Housing Prices</div>
-              <div class="cardDesc">
-                Compared regression, trees, k-NN, ensembles, GAM, and neural nets using a consistent MSPE framework.
-                Documented trade-offs and selection rationale with stakeholder-friendly visuals.
-              </div>
-
-              <div class="tags">
-                <span class="tag">Python</span>
-                <span class="tag">Model Evaluation</span>
-                <span class="tag">MSPE</span>
-                <span class="tag">Interpretability</span>
-              </div>
-
-              <div class="cardLinks">
-                <a href="PASTE_GITHUB_REPO_LINK" target="_blank" rel="noopener">Code ↗</a>
-                <a href="PASTE_HTML_REPORT_LINK" target="_blank" rel="noopener">Report ↗</a>
-              </div>
-            </div>
-          </article>
-
-          <!-- Project 2 -->
-          <article class="card">
-            <div class="badge ghost">ML</div>
-            <div class="thumb"></div>
-            <div class="cardBody">
-              <div class="cardTitle">F1 Win Probability Predictor</div>
-              <div class="cardDesc">
-                Feature engineering + evaluation to estimate win probability. Added explainability to show what drives predictions.
-              </div>
-              <div class="tags">
-                <span class="tag">Python</span><span class="tag">XGBoost</span><span class="tag">SHAP</span>
-              </div>
-              <div class="cardLinks">
-                <a href="#" target="_blank" rel="noopener">Code ↗</a>
-                <a href="#" target="_blank" rel="noopener">App ↗</a>
-              </div>
-            </div>
-          </article>
-
-          <!-- Project 3 -->
-          <article class="card">
-            <div class="badge ghost">SQL</div>
-            <div class="thumb"></div>
-            <div class="cardBody">
-              <div class="cardTitle">SQL + ETL: Analytics-Ready Tables</div>
-              <div class="cardDesc">
-                Converted raw transactional data into KPI-ready tables with joins/windows, data quality checks, and documentation.
-              </div>
-              <div class="tags">
-                <span class="tag">SQL</span><span class="tag">ETL</span><span class="tag">Data Quality</span>
-              </div>
-              <div class="cardLinks">
-                <a href="#" target="_blank" rel="noopener">Repo ↗</a>
-              </div>
-            </div>
-          </article>
-        </div>
-      </section>
-
-      <!-- EXPERIENCE -->
-      <section id="experience" class="section">
-        <h2>Experience</h2>
-        <div class="panel">
-          <div class="row">
-            <div class="rowTitle">Amazon — Risk Analyst / Senior Data Analyst</div>
-            <div class="rowMeta">2020–2024</div>
-          </div>
-          <ul class="bullets">
-            <li>Owned SQL-driven analysis and reporting for risk and operational decision-making.</li>
-            <li>Improved data reliability through validation checks and consistent metric definitions.</li>
-            <li>Delivered dashboards and insights for cross-functional stakeholders.</li>
-          </ul>
-        </div>
-      </section>
-
-      <!-- SKILLS -->
-      <section id="skills" class="section">
-        <h2>Skills</h2>
-        <div class="panel">
-          <div class="skillGrid">
-            <div>
-              <div class="k">Analytics</div>
-              <div class="v">EDA, KPI design, cohort analysis, experimentation thinking</div>
-            </div>
-            <div>
-              <div class="k">Engineering</div>
-              <div class="v">SQL modeling, joins/windows, ETL logic, documentation</div>
-            </div>
-            <div>
-              <div class="k">ML</div>
-              <div class="v">Regression/classification, evaluation, feature engineering, explainability</div>
-            </div>
-            <div>
-              <div class="k">BI</div>
-              <div class="v">Tableau, Power BI, dashboard design</div>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <!-- CERTIFICATIONS -->
-      <section id="certs" class="section">
-        <h2>Certifications</h2>
-        <div class="panel">
-          <ul class="bullets">
-            <li>AWS Cloud Practitioner (add your exact cert name if different)</li>
-            <li>Graduate Certificate in AI</li>
-          </ul>
-        </div>
-      </section>
-
-      <!-- EDUCATION -->
-      <section id="education" class="section">
-        <h2>Education</h2>
-        <div class="panel">
-          <ul class="bullets">
-            <li>MS Business Analytics — University of Cincinnati</li>
-            <li>BTech Information Technology — Presidency University</li>
-          </ul>
-        </div>
-      </section>
-
-      <!-- NOW -->
-      <section id="now" class="section">
-        <h2>Now</h2>
-        <div class="panel">
-          <ul class="bullets">
-            <li>Targeting Data Analyst / Data Scientist roles (US).</li>
-            <li>Strengthening portfolio with case-study style projects + dashboards.</li>
-          </ul>
-        </div>
-      </section>
-
-      <footer class="footer">
-        <div>© <span id="y"></span> Aishwarya Gurrala Muni</div>
-        <div>Hosted on GitHub Pages</div>
-      </footer>
-    </main>
-  </div>
-
-  <script>
-    document.getElementById("y").textContent = new Date().getFullYear();
-    const btn = document.getElementById("themeToggle");
-    btn.addEventListener("click", () => {
-      document.body.classList.toggle("light");
-      btn.textContent = document.body.classList.contains("light") ? "☀️" : "🌙";
-    });
-  </script>
-</body>
-</html>
