--- a/index.html
+++ b/index.html
@@ -274,24 +274,59 @@
       </section>
 
       <!-- EXPERIENCE -->
-      <section id="experience" class="section">
-        <h2>Experience</h2>
+     <section id="experience" class="section">
+  <h2>Experience</h2>
 
-        <div class="panel">
-          <div class="row">
-            <div class="rowTitle">Amazon — Risk Analyst / Senior Data Analyst</div>
-            <div class="rowMeta">2020–2024</div>
-          </div>
-          <ul class="bullets">
-            <li>Led SQL + Python analysis on large datasets to identify risk patterns and improve operational decision-making.</li>
-            <li>Built consistent KPI definitions and reporting logic so teams aligned on the same “source of truth.”</li>
-            <li>Automated recurring analysis and validation checks to reduce manual work and increase reliability.</li>
-            <li>Delivered dashboards and decision-ready summaries for cross-functional stakeholders.</li>
-            <li>Translated business problems into measurable metrics and experiments—so results were actionable.</li>
-          </ul>
-        </div>
-      </section>
+  <!-- UC -->
+  <div class="panel">
+    <div class="row">
+      <div class="rowTitle">Graduate Assistant — Data Engineering & ML Research</div>
+      <div class="rowMeta">University of Cincinnati · Cincinnati, OH · Aug 2024 – Dec 2025</div>
+    </div>
 
+    <ul class="bullets">
+      <li>Built Python + PySpark pipelines for <strong>2M+</strong> multimodal (image–text) records to support scalable ingestion, enrichment, and analytics-ready ML datasets.</li>
+      <li>Designed modular workflows with <strong>schema consistency checks</strong>, validation, and reusable transformations aligned with enterprise data engineering practices.</li>
+      <li>Improved pipeline reliability and runtime by <strong>28%</strong> using partitioning, caching, and shuffle reduction techniques.</li>
+      <li>Applied distributed computing concepts (data locality, parallel execution, resource tuning) to improve <strong>cluster utilization</strong> and workload efficiency.</li>
+      <li>Developed Python-based automation + evaluation pipelines integrated into ML workflows, reducing manual effort by <strong>40%</strong> and improving reproducibility.</li>
+      <li>Worked in an Agile research environment with peer programming, design reviews, and ownership of pipeline components end-to-end.</li>
+    </ul>
+  </div>
+
+  <!-- Amazon: Senior -->
+  <div class="panel">
+    <div class="row">
+      <div class="rowTitle">Senior Data Engineer — Risk & Analytics Platforms</div>
+      <div class="rowMeta">Amazon India · Bengaluru, India · Apr 2022 – Jun 2024</div>
+    </div>
+
+    <ul class="bullets">
+      <li>Designed and supported large-scale distributed pipelines processing <strong>1B+</strong> supply-chain records daily using <strong>SQL</strong> and <strong>Python</strong>.</li>
+      <li>Delivered analytics-ready datasets used by <strong>10+ teams</strong> for risk detection, compliance monitoring, and operational reporting.</li>
+      <li>Migrated <strong>15+</strong> legacy workflows into Amazon’s enterprise data platform with schema validation, lineage checks, and data quality controls.</li>
+      <li>Improved pipeline performance by <strong>25%</strong> through partition strategy, join optimization, and data layout improvements.</li>
+      <li>Built automated monitoring + RCA dashboards, reducing operational handling time by <strong>20%</strong> and recurring failures by <strong>30%</strong>.</li>
+      <li>Partnered with <strong>5+</strong> platform, security, and analytics teams to align pipelines with governance and architecture standards.</li>
+    </ul>
+  </div>
+
+  <!-- Amazon: DE -->
+  <div class="panel">
+    <div class="row">
+      <div class="rowTitle">Data Engineer — Seller Risk & Operations Analytics</div>
+      <div class="rowMeta">Amazon India · Bengaluru, India · Jun 2020 – Apr 2022</div>
+    </div>
+
+    <ul class="bullets">
+      <li>Developed ETL pipelines and analytical datasets across <strong>200M+</strong> shipments and <strong>40M+</strong> invoices for fraud detection and seller risk modeling.</li>
+      <li>Authored and optimized <strong>50+</strong> SQL transformations and KPI pipelines to improve freshness and reporting reliability.</li>
+      <li>Supported <strong>15+</strong> dashboards by maintaining consistent, well-documented datasets for analytics consumers.</li>
+      <li>Optimized Hadoop-based pipelines using partitioning and join tuning, improving ingestion stability by <strong>20%</strong>.</li>
+      <li>Managed <strong>6+</strong> concurrent data initiatives while coordinating with stakeholders to meet tight delivery timelines.</li>
+    </ul>
+  </div>
+</section>
       <!-- SKILLS -->
       <section id="skills" class="section">
         <h2>Skills</h2>
