--- a/index.html
+++ b/index.html
@@ -159,8 +159,9 @@
               </div>
 
               <div class="cardLinks">
-                <a href="PASTE_STREAMLIT_APP_LINK" target="_blank" rel="noopener">Live App ↗</a>
-                <a href="PASTE_SHIPPING_REPO_LINK" target="_blank" rel="noopener">Code ↗</a>
+               <a href="https://shipping-delay-ml-ty2sk489ucfsrx5qojicaa.streamlit.app" target="_blank" rel="noopener">Live App ↗</a>
+<a href="https://github.com/aishwarya-gurrala/shipping-delay-ml" target="_blank" rel="noopener">Code ↗</a>
+
               </div>
             </div>
           </article>
