--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
               </div>
 
               <div class="cardLinks">
-               <a href="https://shipping-delay-ml-ty2sk489ucfsrx5qojicaa.streamlit.app" target="_blank" rel="noopener">Live App ↗</a>
+               <a href="https://shipping-delay-ml-ty2sk489ucfsrx5qojicaa.streamlit.app/" target="_blank" rel="noopener">Live App ↗</a>
 <a href="https://github.com/aishwarya-gurrala/shipping-delay-ml" target="_blank" rel="noopener">Code ↗</a>
 
               </div>
