--- a/index.html
+++ b/index.html
@@ -186,11 +186,14 @@
                 <span class="tag">XGBoost</span><span class="tag">SHAP</span><span class="tag">AUC</span>
               </div>
 
-              <div class="cardLinks">
-                <a href="PASTE_TENNIS_APP_LINK" target="_blank" rel="noopener">Demo ↗</a>
-                <a href="PASTE_TENNIS_REPO_LINK" target="_blank" rel="noopener">Code ↗</a>
-              </div>
-            </div>
+            <div class="cardLinks">
+  <a href="https://github.com/aishwarya-gurrala/f1-prediction-app" target="_blank">
+    GitHub
+  </a>
+  <a href="https://f1-prediction-app-mruoings3ujrejeukpdwkx.streamlit.app/" target="_blank">
+    Live App ↗
+  </a>
+</div>
           </article>
 
           <!-- 4 -->
