--- a/index.html
+++ b/index.html
@@ -216,11 +216,15 @@
                 <span class="tag">XGBoost</span><span class="tag">SHAP</span><span class="tag">Metrics</span>
               </div>
 
-              <div class="cardLinks">
-                <a href="PASTE_F1_APP_LINK" target="_blank" rel="noopener">App ↗</a>
-                <a href="PASTE_F1_REPO_LINK" target="_blank" rel="noopener">Code ↗</a>
-              </div>
-            </div>
+            <div class="cardLinks">
+  <a href="https://github.com/aishwarya-gurrala/f1-prediction-app" target="_blank">
+    GitHub
+  </a>
+  <a href="https://f1-prediction-app-mruoings3ujrejeukpdwkx.streamlit.app/" target="_blank">
+    Live App ↗
+  </a>
+</div>
+
           </article>
 
           <!-- 5 -->
