--- a/index.html
+++ b/index.html
@@ -176,10 +176,11 @@
             </div>
 
             <div class="cardBody">
-              <div class="cardTitle">Tennis Win Predictor</div>
+              <div class="cardTitle">Formula 1 Win Probability Predictor</div>
               <div class="cardDesc">
-                Built a win-prediction pipeline and evaluated models using strong baselines.
-                Added interpretability so results are explainable and not “magic.”
+                A leakage-safe ML app that predicts race-day win probabilities using only pre-race signals.
+Trained on historical seasons with the most recent season held out for validation.
+Built with XGBoost and deployed as a live Streamlit application.
               </div>
 
               <div class="tags">
