--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="role">Data Analytics · Data Engineering · AI/ML</div>
 
         <p class="blurb">
-          I build decision-ready analytics and ML systems — clean data, reliable metrics,
+          I build decision-ready analytics and ML systems - clean data, reliable metrics,
           and models you can actually trust on a real day.
         </p>
 
@@ -79,23 +79,24 @@
           to build work that’s reliable — and easy to explain.
         </p>
 
+        <!-- UPDATED PROOF CARDS -->
         <div class="proofGrid">
           <div class="proofCard">
-            <div class="proofValue">2M+</div>
-            <div class="proofLabel">records prepared</div>
-            <div class="proofMeta">analytics-ready + ML-ready</div>
+            <div class="proofValue">1B+</div>
+            <div class="proofLabel">Amazon data engineering</div>
+            <div class="proofMeta">daily scale pipelines</div>
           </div>
 
           <div class="proofCard">
-            <div class="proofValue">3</div>
-            <div class="proofLabel">live projects</div>
-            <div class="proofMeta">apps + deployed reports</div>
+            <div class="proofValue">10+ teams</div>
+            <div class="proofLabel">analytics + KPI pipelines</div>
+            <div class="proofMeta">trusted datasets + dashboards</div>
           </div>
 
           <div class="proofCard">
-            <div class="proofValue">End-to-end</div>
-            <div class="proofLabel">from data → output</div>
-            <div class="proofMeta">ETL · evaluation · delivery</div>
+            <div class="proofValue">Live apps</div>
+            <div class="proofLabel">ML projects deployed</div>
+            <div class="proofMeta">recruiters can click & test</div>
           </div>
         </div>
       </section>
