--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
         <p class="sub">
           I combine clean data pipelines, strong metrics, and practical ML evaluation
-          to build work that’s reliable — and easy to explain.
+          to build work that’s reliable - and easy to explain.
         </p>
 
         <!-- UPDATED PROOF CARDS -->
