--- a/index.html
+++ b/index.html
@@ -198,6 +198,9 @@
               </div>
 
               <div class="tags">
+
+
+            
                 <span class="tag">Model Selection</span><span class="tag">MSPE</span><span class="tag">Case Study</span>
               </div>
 
@@ -299,36 +302,59 @@
       </section>
 
       <!-- EXPERIENCE -->
-      <section id="experience" class="section">
-        <h2>Experience</h2>
+     <!-- EXPERIENCE -->
+<section id="experience" class="section">
+  <h2>Experience</h2>
 
-        <div class="panel">
-          <div class="row">
-            <div class="rowTitle">Graduate Assistant — Data Engineering & ML Research</div>
-            <div class="rowMeta">University of Cincinnati · Cincinnati, OH · Aug 2024 – Dec 2025</div>
-          </div>
+  <!-- UC -->
+  <div class="panel">
+    <div class="row">
+      <div class="rowTitle">Graduate Assistant — Data Engineering & ML Research</div>
+      <div class="rowMeta">University of Cincinnati · Cincinnati, OH · Aug 2024 – Dec 2025</div>
+    </div>
 
-          <ul class="bullets">
-            <li>Built Python + PySpark pipelines for <strong>2M+</strong> multimodal (image–text) records for ML-ready datasets.</li>
-            <li>Designed reusable transformations with <strong>schema checks</strong> and validation for reliability.</li>
-            <li>Improved pipeline runtime by <strong>28%</strong> using partitioning, caching, and shuffle reduction.</li>
-            <li>Built evaluation + automation to reduce manual effort by <strong>40%</strong> and improve reproducibility.</li>
-          </ul>
-        </div>
+    <ul class="bullets">
+      <li>Built Python + PySpark pipelines for <strong>2M+</strong> multimodal (image–text) records, producing analytics-ready and ML-ready datasets.</li>
+      <li>Designed modular workflows with <strong>schema consistency checks</strong>, validation, and reusable transformations aligned with enterprise DE practices.</li>
+      <li>Optimized distributed workloads using partitioning, caching, and shuffle reduction — improving runtime efficiency and reliability by <strong>28%</strong>.</li>
+      <li>Automated evaluation + data checks inside the pipeline, reducing manual effort by <strong>40%</strong> and improving reproducibility.</li>
+      <li>Worked in an Agile research environment (peer programming, design reviews) with ownership of pipeline components end-to-end.</li>
+    </ul>
+  </div>
 
-        <div class="panel">
-          <div class="row">
-            <div class="rowTitle">Senior Data Engineer — Risk & Analytics Platforms</div>
-            <div class="rowMeta">Amazon India · Bengaluru, India · Apr 2022 – Jun 2024</div>
-          </div>
+  <!-- Amazon 2022-2024 -->
+  <div class="panel">
+    <div class="row">
+      <div class="rowTitle">Senior Data Engineer — Risk & Analytics Platforms</div>
+      <div class="rowMeta">Amazon India · Bengaluru, India · Apr 2022 – Jun 2024</div>
+    </div>
 
-          <ul class="bullets">
-            <li>Designed pipelines processing <strong>1B+</strong> supply-chain records daily using SQL + Python.</li>
-            <li>Migrated <strong>15+</strong> workflows with validation, lineage checks, and data quality controls.</li>
-            <li>Built monitoring + RCA dashboards reducing recurring failures by <strong>30%</strong>.</li>
-          </ul>
-        </div>
-      </section>
+    <ul class="bullets">
+      <li>Designed and supported distributed pipelines processing <strong>1B+</strong> supply-chain records daily using SQL + Python.</li>
+      <li>Delivered analytics-ready datasets used by <strong>10+ teams</strong> for risk detection, compliance monitoring, and operational reporting.</li>
+      <li>Migrated <strong>15+</strong> legacy workflows into Amazon’s enterprise platform with schema validation, lineage checks, and quality controls.</li>
+      <li>Improved pipeline performance by <strong>25%</strong> through partition optimization, join strategy refinement, and data layout improvements.</li>
+      <li>Built monitoring + RCA dashboards and automated alerting — reducing operational handling time by <strong>20%</strong> and recurring failures by <strong>30%</strong>.</li>
+    </ul>
+  </div>
+
+  <!-- Amazon 2020-2022 -->
+  <div class="panel">
+    <div class="row">
+      <div class="rowTitle">Data Engineer — Seller Risk & Operations Analytics</div>
+      <div class="rowMeta">Amazon India · Bengaluru, India · Jun 2020 – Apr 2022</div>
+    </div>
+
+    <ul class="bullets">
+      <li>Built ETL pipelines and analytical datasets across <strong>200M+</strong> shipments and <strong>40M+</strong> invoices to support fraud detection and seller risk modeling.</li>
+      <li>Authored and optimized <strong>50+</strong> SQL transformations and KPI pipelines to improve data freshness and reporting reliability.</li>
+      <li>Supported <strong>15+</strong> downstream dashboards by maintaining consistent, well-documented datasets for analytics consumers.</li>
+      <li>Optimized Hadoop-based pipelines via partitioning and join tuning — improving ingestion stability by <strong>20%</strong>.</li>
+      <li>Handled multiple concurrent initiatives while partnering with stakeholders to meet tight delivery timelines.</li>
+    </ul>
+  </div>
+</section>
+
 
       <!-- SKILLS -->
       <section id="skills" class="section">
