--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         <div class="sectionHead">
           <div>
             <h2>Projects</h2>
-            <p class="sectionSub">Live apps + deep-dive case studies (challenge → solution → impact).</p>
+            <p class="sectionSub">Live apps + deep-dive projects (challenge → solution → impact).</p>
           </div>
 
           <!-- Tabs -->
@@ -216,7 +216,7 @@
         <div class="grid tabPanel" data-panel="case">
           <!-- AI Customer Insights -->
           <article class="card">
-            <div class="badge ghost">CASE STUDY</div>
+            <div class="badge ghost">Applied Project</div>
 
             <a class="cardTopLink" href="projects/ai-customer-insights.html">
               <div class="thumb">
@@ -238,14 +238,14 @@
               </div>
 
               <div class="cardLinks">
-                <a href="projects/ai-customer-insights.html">Open Case Study ↗</a>
+                <a href="projects/ai-customer-insights.html">Open Research Project ↗</a>
               </div>
             </div>
           </article>
 
           <!-- ETL Retail -->
           <article class="card">
-            <div class="badge ghost">CASE STUDY</div>
+            <div class="badge ghost">Applied Project</div>
 
             <a class="cardTopLink" href="projects/etl-retail.html">
               <div class="thumb">
@@ -266,14 +266,14 @@
               </div>
 
               <div class="cardLinks">
-                <a href="projects/etl-retail.html">Open Case Study ↗</a>
+                <a href="projects/etl-retail.html">Open Research Project↗</a>
               </div>
             </div>
           </article>
 
           <!-- Dify + Docker -->
           <article class="card">
-            <div class="badge ghost">CASE STUDY</div>
+            <div class="badge ghost">Applied Project</div>
 
             <a class="cardTopLink" href="projects/dify-docker.html">
               <div class="thumb">
@@ -294,7 +294,7 @@
               </div>
 
               <div class="cardLinks">
-                <a href="projects/dify-docker.html">Open Case Study ↗</a>
+                <a href="projects/dify-docker.html">Open Applied Project ↗</a>
               </div>
             </div>
           </article>
