--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
           <!-- Tabs -->
           <div class="tabs" role="tablist" aria-label="Project tabs">
             <button class="tabBtn isActive" data-tab="live" role="tab" aria-selected="true">Live</button>
-            <button class="tabBtn" data-tab="case" role="tab" aria-selected="false">Case Studies</button>
+            <button class="tabBtn" data-tab="case" role="tab" aria-selected="false">Applied Project</button>
           </div>
         </div>
 
